Correção do último commit que deixou arquivos de fora

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,10 @@ set(SOURCES
     furnitures/camera_export.c
     furnitures/computador_export.c
     furnitures/gabinete_export.c
+    furnitures/tcadeiras_export.c
+    furnitures/privada_export.c
+    furnitures/mesaR_export.c
+    furnitures/cadeiraU_export.c
     src/furniture.c
 )
 
